--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
-/* @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&display=swap'); */
-
 :root{
   --vermelho: #E50914;
   --preto: #141414;
   --branco: rgba(255, 255, 255, 0.952);
 }
-
 
 /*elementos base*/
 *{
@@ -29,14 +26,13 @@ a{
 }
 
 
-/*cabecalho*/
 
+/*cabecalho*/
 #header{
    position: fixed;
    background: transparent;
-   /* top: 0; */
-   width: 100%; /* Full width */
-   transition: .6s ease; /* Add a transition effect (when scrolling - and font size is decreased) */
+   width: 100%; 
+   transition: .6s ease;
 }
 header .container{
   display: flex;
@@ -102,7 +98,7 @@ header nav a:hover{
 .title{
    font-size: 40px;
    font-weight: 700;
-}
+} 
 
 
 
@@ -117,6 +113,7 @@ header nav a:hover{
    font-weight: 600;
 
    cursor: pointer;
+   margin-bottom: 100px;
    
 }
 .btn i{
@@ -139,11 +136,48 @@ header nav a:hover{
 }
 
 
+
+/*título catálogo*/
+.carousel-title {
+   font-size: 20px;
+   color: var(--branco);
+   opacity: .8;
+   padding: 15px 0 15px 55px;
+   display: inline-block;
+   font-weight: 700;
+   cursor: pointer;
+}
+
+.expandir{
+   display: inline-block;
+   cursor: pointer;
+   color: #54b9c5;
+   opacity: 0;
+   font-size: 14px;
+   font-weight: 700;
+   transition: visibility 0s, padding 0.6s, opacity 0.5s ;
+   
+}
+.expandir i{
+   padding-left: 5px;
+   
+}
+
+.carousel-title:hover + .expandir, .expandir:hover{
+   padding-left: 15px;
+   visibility: visible;
+   opacity: 1;
+   
+}
+
+
+
 /*catálogo*/
 .item{
    height: 240px;
    object-position: center;
    object-fit: cover;
+   border-radius: 10px;
 }
 
 .owl-carousel{
@@ -163,4 +197,44 @@ header nav a:hover{
 .owl-prev span, .owl-next span{
    font-size: 90px;
    color: var(--branco);
+}
+
+
+/*rodapé*/
+
+footer{
+   max-width: 980px;
+   margin: 100px auto 0;
+   padding: 0 4%;
+}
+
+.social-links{
+   display: flex;
+   margin-bottom: 1em;
+}
+
+.social-links a{
+   padding-right: 20px;
+   color: grey;
+   font-size: 30px;
+}
+
+.options-links{
+   display: flex;
+   flex-wrap: wrap;  
+}
+
+.options-links li{
+   width: 25%;
+   margin-bottom: 10px;
+
+   color: gray;
+   font-size: 13px;
+   font-weight: 500;
+}
+
+.copy{
+   color: gray;
+   font-size: 12px;
+   margin: 10px 0 20px 0;
 }
